WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274891
Fix !ENABLE(MODERN_MEDIA_CONTROLS) build following
279471@main
https://bugs.webkit.org/show_bug.cgi?id=274891
Summary
Fix !ENABLE(MODERN_MEDIA_CONTROLS) build following 279471@main
Ross Kirsling
Reported
2024-05-30 01:19:59 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Ross Kirsling
Comment 1
2024-05-30 01:21:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29293
EWS
Comment 2
2024-05-30 01:23:28 PDT
Committed
279504@main
(adc45c7a7123): <
https://commits.webkit.org/279504@main
> Reviewed commits have been landed. Closing PR #29293 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-05-30 01:25:32 PDT
<
rdar://problem/128992063
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug