Fix !ENABLE(MODERN_MEDIA_CONTROLS) build following 279471@main https://bugs.webkit.org/show_bug.cgi?id=274891

Unreviewed build fix.

* Source/WebCore/Modules/mediacontrols/MediaControlsHost.cpp:
(WebCore::MediaControlsHost::supportsRewind const):

Canonical link: https://commits.webkit.org/279504@main